log
Fri Mar 18 14:36:06 UTC 2022: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|6
total_score: 0/70
9ec9f75
Fri Mar 18 14:36:53 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
a72959e
Fri Mar 18 14:38:46 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
9ed5fe9
Fri Mar 18 14:48:55 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:39:19: error: implicit declaration of function ‘first’ [-Werror=implicit-function-declaration]
   list->current = first(list);
                   ^~~~~
list.c:39:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   list->current = first(list);
                 ^
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
bf78af9
Fri Mar 18 14:56:12 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
eb1fcff
Fri Mar 18 15:00:52 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
be8e528
Fri Mar 18 15:02:43 UTC 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
4077457
Fri Mar 18 15:05:09 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
c0be75e
Fri Mar 18 15:06:16 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:19: error: implicit declaration of function ‘next’; did you mean ‘exit’? [-Werror=implicit-function-declaration]
   list->current = next(list->current);
                   ^~~~
                   exit
list.c:47:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   list->current = next(list->current);
                 ^
cc1: all warnings being treated as errors
Compilation failed
e8fa1a2
Fri Mar 18 15:09:10 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:3: error: implicit declaration of function ‘next’; did you mean ‘exit’? [-Werror=implicit-function-declaration]
   next(list->current);
   ^~~~
   exit
cc1: all warnings being treated as errors
Compilation failed
4ed3ad7
Fri Mar 18 15:10:52 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:9: error: ‘List {aka struct List}’ has no member named ‘currrent’; did you mean ‘current’?
   list->currrent = next(list);
         ^~~~~~~~
         current
list.c:47:20: error: implicit declaration of function ‘next’; did you mean ‘exit’? [-Werror=implicit-function-declaration]
   list->currrent = next(list);
                    ^~~~
                    exit
cc1: all warnings being treated as errors
Compilation failed
001aca0
Fri Mar 18 15:14:30 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b2a953
Fri Mar 18 15:16:17 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
617719e
Fri Mar 18 15:16:56 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
59c8742
Fri Mar 18 15:17:36 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
fe4f291
Fri Mar 18 18:38:25 UTC 2022: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘lastList’:
list.c:55:11: error: ‘List {aka struct List}’ has no member named ‘last’
   if (list->last == NULL || list->current == NULL) return NULL;
           ^~
list.c:56:23: error: ‘List {aka struct List}’ has no member named ‘last’
   list->current = list->last;
                       ^~
Compilation failed
f0d238e
Fri Mar 18 18:39:01 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
cf7abcf
Fri Mar 18 18:41:01 UTC 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘prevList’:
list.c:61:36: error: ‘List {aka struct List}’ has no member named ‘prev’
   if (list->current == NULL || list->prev == NULL) return NULL;
                                    ^~
list.c:63:23: error: ‘List {aka struct List}’ has no member named ‘prev’
   list->current = list->prev;
                       ^~
list.c:64:12: error: called object is not a function or function pointer
     return list->current NULL;
            ^~~~
list.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
e57a82f
Sun Mar 20 00:01:31 UTC 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘prevList’:
list.c:61:36: error: ‘List {aka struct List}’ has no member named ‘prev’
   if (list->current == NULL || list->prev == NULL) return NULL;
                                    ^~
list.c:62:23: error: ‘List {aka struct List}’ has no member named ‘prev’
   list->current = list->prev;
                       ^~
list.c:66:23: error: ‘List {aka struct List}’ has no member named ‘prev’
   list->current = list->prev;
                       ^~
list.c:67:12: error: called object is not a function or function pointer
     return list->current NULL;
            ^~~~
Compilation failed
84b48b0
Sun Mar 20 00:10:17 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘prevList’:
list.c:66:23: error: ‘List {aka struct List}’ has no member named ‘prev’
   list->current = list->prev;
                       ^~
list.c:67:12: error: called object is not a function or function pointer
     return list->current NULL;
            ^~~~
Compilation failed
97d1c7a
Sun Mar 20 00:12:53 UTC 2022: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|4
total_score: 25/70
8ace151
Sun Mar 20 00:21:36 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
c395bec
Sun Mar 20 00:22:51 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5cb31d2
Sun Mar 20 00:53:23 UTC 2022: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:68:34: error: ‘return’ with a value, in function returning void [-Werror]
   if (list->head == NULL) return NULL;
                                  ^~~~
list.c:67:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:72:9: error: ‘List {aka struct List}’ has no member named ‘haed’; did you mean ‘head’?
   list->haed->next = n;
         ^~~~
         head
cc1: all warnings being treated as errors
Compilation failed
855b112
Sun Mar 20 00:56:11 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
1dd5ad3
Sun Mar 20 00:59:07 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
bd80a1c
Sun Mar 20 01:02:57 UTC 2022: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
b9a1af3
Sun Mar 20 01:04:05 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:73:19: error: expected ‘;’ before ‘:’ token
     list->tail = n:
                   ^
Compilation failed
eee5ac5
Sun Mar 20 01:04:32 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
575ad60
Sun Mar 20 01:10:39 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
4724778
Sun Mar 20 01:33:27 UTC 2022: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:89:12: error: invalid initializer
   Node n = createNode(data);
            ^~~~~~~~~~
list.c:90:4: error: invalid type argument of ‘->’ (have ‘Node {aka struct Node}’)
   n->prev = list->current;
    ^~
list.c:91:4: error: invalid type argument of ‘->’ (have ‘Node {aka struct Node}’)
   n->next = list->current->next;
    ^~
list.c:92:29: error: incompatible types when assigning to type ‘Node * {aka struct Node *}’ from type ‘Node {aka struct Node}’
   list->current->next->prev = n;
                             ^
Compilation failed
3ad9c89
Sun Mar 20 01:33:50 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
a9e24c5
Sun Mar 20 01:48:04 UTC 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
d50f9b3
Sun Mar 20 01:49:04 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
023c78a
Sun Mar 20 12:30:26 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0b173b8
Sun Mar 20 12:35:00 UTC 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
f85e92c
Sun Mar 20 12:39:38 UTC 2022: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
8ea817c
